# diploma_project

./: .env.bstack  .env.local_emulator  .env.personal_data.example  .gitignore  README.md  config.py  conftest.py  pyproject.toml  pytest.ini  pyvenv.cfg  readme.md  readme2.md  readme3.md  requirements.txt
api/: utils.py
api/tests/: test_add_4_items_to_cart_with_api.py  test_add_different_items_to_cart_with_api.py  test_add_to_cart_from_catalog_with_api.py  test_delete_204_succesfully.py  test_five.py  test_get_single_user_successfully.py  test_one.py  test_post_create_201_succesfully.py  test_post_register_400_unsuccessfully.py  test_put_update_200_succesfully.py  test_three.py  test_two.py
api_testing/: conftest.py
api_testing/tests/: test_four.py  test_one.py
helper/: attach_helpers.py  get_env_path.py
helper/api_helpers/: load_json_schema.py  utils.py
mobile/: .env.local_emulator  .env.mobile.browserstack.example  README.md  config.py  conftest.py  test_open_some_article.py
mobile/tests/: conftest.py  test_onboarding_screen_and_search.py  test_search_wiki.py
mobile/utils/: allure_attach.py  file.py
mobile_testing/: README.md  config.py
mobile_testing/utils/: allure_attach.py
pages/web_pages/: registration_page.py
tests/api/: conftest.py  test_add_4_items_to_cart_with_api.py  test_add_different_items_to_cart_with_api.py  test_add_to_cart_from_catalog_with_api.py  test_delete_204_succesfully.py  test_get_single_user_successfully.py  test_post_create_201_succesfully.py  test_post_register_400_unsuccessfully.py  test_put_update_200_succesfully.py
tests/mobile/: .env.mobile.browserstack.example  .env.mobile.local.example  config.py  conftest.py  test_open_some_article.py  test_search_wiki.py
tests/ui/: conftest.py  test_registration_form.py
tests/web/: conftest.py  test_registration_form.py
ui/: conftest.py
ui/data/: users.py
ui/page_object/: page_object.py  (+1 more)
ui_testing/: conftest.py
(+52 files in other folders)
